[tool.poetry]
name = "my-python-project"
version = "0.1.0"
description = "A production-grade Python project template using Poetry, Docker, and Makefiles"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.3.0"
ruff = "^0.0.290"
mypy = "^1.3.0"
coverage = "^7.2.7"
pre-commit = "^3.3.2"
commitizen = "^3.2.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "C", "D"]
ignore = ["D100", "D104", "D107", "D203", "D213"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

